Commit endPoint AgenteRet
